# token-2022

./: Cargo.toml  README.md
clients/cli/: Cargo.toml
clients/cli/examples/: confidential-transfer.sh
clients/cli/src/: clap_app.rs  command.rs
clients/cli/tests/: command.rs
clients/js-legacy/: package.json
clients/js-legacy/src/: constants.ts
clients/rust-legacy/: Cargo.toml
clients/rust-legacy/src/: token.rs
clients/rust-legacy/tests/: basic.rs  burn.rs  confidential_transfer.rs  confidential_transfer_fee.rs  cpi_guard.rs  delegate.rs  initialize_account.rs  initialize_mint.rs  interest_bearing_mint.rs  memo_transfer.rs  mint_close_authority.rs  non_transferable.rs  pausable.rs  permanent_delegate.rs  program_test.rs  reallocate.rs  scaled_ui_amount.rs  sync_native.rs  transfer.rs  transfer_fee.rs  transfer_hook.rs
confidential-transfer/ciphertext-arithmetic/: Cargo.toml
confidential-transfer/elgamal-registry/: Cargo.toml
confidential-transfer/proof-extraction/: Cargo.toml
confidential-transfer/proof-generation/: Cargo.toml
program/: Cargo.toml  idl.json
program/src/: generic_token_account.rs  instruction.rs  lib.rs  native_mint.rs  offchain.rs  onchain.rs  pod.rs  pod_instruction.rs  processor.rs  state.rs
program/src/extension/: mod.rs  reallocate.rs
program/src/extension/confidential_transfer/: instruction.rs  processor.rs
program/src/extension/interest_bearing_mint/: mod.rs
program/src/extension/scaled_ui_amount/: mod.rs
program/src/extension/transfer_fee/: instruction.rs  mod.rs  processor.rs
program/tests/: action.rs
scripts/: upgrade-template.mjs
